fix: text box in embed widget modal being cut off (WEBAPP-47012)

--- a/src/components/text-input/TextInput.scss
+++ b/src/components/text-input/TextInput.scss
@@ -29,6 +29,10 @@
         word-wrap: break-word;
     }
 
+    .text-input-tooltip-target {
+        display: block;
+    }
+
     input {
         height: 32px;
         margin-top: 5px;
